--- a/webview/public/index.html
+++ b/webview/public/index.html
@@ -27,15 +27,23 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <button type="button" onclick="sendBack()">
-      index.html에서
-    </button>
-    <script type="text/javascript">
-      window.sendBack = function (text) {
-        Yourwish.postMessage(text);
-      }
+    <h1>JavaScript Handlers</h1>
+    <script>
+      window.addEventListener("flutterInAppWebViewPlatformReady", function(event) {
+        alert("Webview is loaded");
+      }, {
+        once: true,
+      });
+      // window.addEventListener("getContactData", (event) => {
+      //   alert(JSON.stringify());
+      // }, {
+      //   once: false,
+      // });
     </script>
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
+    <!-- iamport.payment.js -->
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.8.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
