--- a/yourwish/yourwish/public/index.html
+++ b/yourwish/yourwish/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- 카카오 -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
